--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2023-01-22 05:05+0000\n"
 "PO-Revision-Date: 2022-12-11 23:08+0800\n"
-"Last-Translator: clsty <ph-tyhu@outlook.com>\n"
+"Last-Translator: clsty <celestial.y@outlook.com>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
