Man for paru.conf didn't display properly

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -1,4 +1,4 @@
-..TH "PARU.CONF" "5" "2021\-03\-24" "paru v1.10.0" "Paru Manual"
+.TH "PARU.CONF" "5" "2021\-03\-24" "paru v1.10.0" "Paru Manual"
 .nh
 .ad l
 .SH NAME
