--- a/man/paru.8
+++ b/man/paru.8
@@ -631,6 +631,10 @@ local repos, building new packages into the first listed repo and upgrading the 
 in other enabled repos.
 
 .TP
+.B \-\-nolocalrepo
+Do not build into a local repo.
+
+.TP
 .B \-\-chroot [= /path/to/chroot]
 Build packages in a chroot. This requires the LocalRepo option to be enabled.
 Optionally a directory may be passed to specify where to create the chroot.
