--- a/man/paru.8
+++ b/man/paru.8
@@ -292,6 +292,11 @@ The command to use for \fBpacman\fR calls. This can be a command in
 \fBPATH\fR or an absolute path to the file.
 
 .TP
+.B \-\-pacman-conf <command>
+The command to use for \fBpacman-conf\fR calls. This can be a command in
+\fBPATH\fR or an absolute path to the file.
+
+.TP
 .B \-\-git <command>
 The command to use for \fBgit\fR calls. This can be a command in
 \fBPATH\fR or an absolute path to the file.
