Change URL to Url

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -394,7 +394,7 @@ Paru will refresh PKGBUILD repositories when it refreshes repository databases.
 Refreshing just PKGBUILD repositories can be done with \fBparu -Sya\fR.
 
 .TP
-.B URL = https://path/to/repo
+.B Url = https://path/to/repo
 Git URL to the PKGBUILD repository. File paths may be used to point to git repos on
 disk.
 
