Fixed typos in man page

--- a/man/paru.8
+++ b/man/paru.8
@@ -273,7 +273,7 @@ For -S/-R this allows you to pick which packages to install/remove from a list.
 
 \fB paru <foo>\fR is an alias to \fBparu -S --interactive <foo>\fR.
 
-For -Ss/-Qs this allows you to interactivly pick packages from the sync/local repos respectively.
+For -Ss/-Qs this allows you to interactively pick packages from the sync/local repos respectively.
 This is intended to be chained with other package tools so paru can handle the menu work while the
 other tool in the pipeline just gets the packages.
 
@@ -284,7 +284,7 @@ For example:
 will show AUR packages containing the term ruby, give the user an interactive menu to pick packages, then pipeline
 those packages into -Gc and display the comments.
 
-Would allow a user to interactivly choose what files to list.
+Would allow a user to interactively choose what files to list.
 
 .TP
 .B \-\-aururl
