Remove `news_on_upgrade`; Allow custom URL in cli arguments

--- a/man/paru.8
+++ b/man/paru.8
@@ -553,8 +553,9 @@ gpg config\%.
 
 
 .TP
-.B \-\-newsonupgrade
-Print new news during sysupgrade.
+.B \-\-newsonupgrade[=URL]
+Print new news during sysupgrade. By default paru fetches news from the Arch Linux
+RSS news feed. Users of other distributions can customize the RSS feed URL here.
 
 .TP
 .B \-\-useask
